--- a/public/savedArticles.html
+++ b/public/savedArticles.html
@@ -8,12 +8,14 @@
       integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"
     ></script>
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <script src="./assets/js/app.js"></script>
+
+    <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    <script src="js/app.js"></script>
   </head>
 
   <body>
@@ -40,7 +42,7 @@
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./savedArticles.html">Save Articles</a>
+            <a class="nav-link" href="#">Save Articles</a>
           </li>
           <li class="nav-item">
             <button type="button" class="btn btn-warning" data-toggle="button">
@@ -63,36 +65,19 @@
       <h3>CNET Edition</h3>
     </div>
 
-    <!--No new articles card -->
+    <!--Saved Articles -->
     <!-- <div class="container">
-      <div class="noArticles">
-        <div class="card">
-          <div class="card-header">Uh oh! Looks like we don't have any new articles!</div>     -->
-
-        <!--Options card-->
-        <!-- <div class="options">
-            <div class="card">
-              <div class="card-header">What would you like to do?</div>
-              <div class="card-body">
-                <a href="">Try Scraping New Articles</a>
-                <a href="">Go to Saved Articles</a>
-              </div>
-            </div>
-          </div> 
-        </div>
-      </div>
-    </div> -->
-
-    <!-- Saved Articles -->
-    <div class="container">
       <div id="articlesDiv">
-        <div class="card" id="saved-articles">   
+        <div class="card">
+          <a href=""></a>     
         </div>    
       </div>
-    </div>
-
+    </div> -->
+      
     <!-- Footer -->
     <footer class="footer bg-primary"><p>CNET Mongo Scraper</p></footer>
 
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <!-- <script src="app.js"></script> -->
   </body>
 </html>
