--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
       <button
         class="navbar-toggler"
         type="button"
@@ -35,20 +35,20 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" href="#"
+            <a class="nav-link" href="./index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./savedArticles.html">Save Articles</a>
+            <a class="nav-link" href="./savedArticles.html">Saved Articles</a>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-warning" data-toggle="button">
+            <button type="button" class="btn btn-warning" id="scrape" data-toggle="button">
               SCRAPE NEW ARTICLES!
             </button>
           </li>
           <li>
-            <button type="button" class="btn btn-warning">
+            <button type="button" class="btn btn-warning" id="btn-clear">
               CLEAR ARTICLES!
             </button>
           </li>
